--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/client": "^6.15.4",
     "@sanity/image-url": "^1.0.2",
     "astro": "^4.3.6",
     "astro-icon": "^1.1.0",
