--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "astro-link": "^1.2.1",
     "astro-portabletext": "^0.9.6",
     "astro-sanity": "^1.1.7",
+    "axios": "^1.7.9",
+    "framer-motion": "^11.16.0",
+    "openai": "^4.77.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
