--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.16.0",
     "openai": "^4.77.0",
+    "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
