--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.15.4",
     "@sanity/image-url": "^1.0.2",
-    "astro": "^4.3.6",
+    "astro": "^5.1.3",
     "astro-icon": "^1.1.0",
     "astro-link": "^1.2.1",
     "astro-portabletext": "^0.9.6",
@@ -27,6 +27,7 @@
     "openai": "^4.77.0",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "tailwindcss": "^3.4.1"
