--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
     "@portabletext/react": "^3.0.11",
+    "@sanity/astro": "^3.1.9",
     "@sanity/client": "^6.15.4",
     "@sanity/image-url": "^1.0.2",
     "astro": "^5.1.3",
@@ -27,7 +28,6 @@
     "openai": "^4.77.0",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
-    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "tailwindcss": "^3.4.1"
