--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^5.1.2",
+    "@astrojs/netlify": "^6.0.1",
     "@astrojs/react": "^3.0.10",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.3.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vercel": "^8.0.1",
     "@portabletext/react": "^3.0.11",
     "@sanity/astro": "^3.1.9",
     "@sanity/client": "^6.15.4",
@@ -26,6 +26,8 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.16.0",
     "openai": "^4.77.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
