--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"]
-    },
-    "jsx": "preserve",
-    "jsxImportSource": "react"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "extends": "astro/tsconfigs/base"
 }
